k8s/services/sample-frontend-canary-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-frontend-canary
  name: sample-frontend-canary
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    load-balancer-sample-frontend-canary: "true"
  sessionAffinity: None
  type: NodePort
