k8s/services/sample-frontend-prod-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sample-frontend-prod
  name: sample-frontend-prod
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    load-balancer-sample-frontend-prod: "true"
  sessionAffinity: None
  type: NodePort
